FIX: Full sidebar positioning, content positioning, overflow

--- a/assets/stylesheets/common/layouts-widgets.scss
+++ b/assets/stylesheets/common/layouts-widgets.scss
@@ -49,7 +49,7 @@ aside.sidebar {
   }
 }
 
-.full-left {
+.left.full {
   top: 4em;
   height: 100vh;
   left: 0;
@@ -59,7 +59,7 @@ aside.sidebar {
   }
 }
 
-.full-right {
+.right.full {
   position: fixed;
   top: 4em;
   height: 100vh;
